frontend/web/micro-ui-internals/packages/css/src/pages/employee/index.scss
@import "./login.scss";

/* TODO: convert using tailwind */
.employee {
  .breadcrumb {
    @apply ml-sm mb-lg;
  }

  .ground-container {
    margin-bottom: 56px;
    @apply flex flex-col;
  }

  .card-home {
    font-size: 16px;
    padding: 0 0 16px 0;
    width: 92vw;
    display: inline-block;
    margin: 8px auto;
  }

  .home-action-cards {
    height: auto !important;
    min-height: 263px;
  }

  .topbar {
    position: fixed;
    top: 0;
    width: 100%;
    padding: 16px 24px;
    background: white;
    box-shadow: rgba(0, 0, 0, 0.24) 0 1px 4px;
    z-index: 9999;
    display: flex;
    align-items: center !important;
    justify-content: space-between !important;

    img {
      display: inline;

      &.city {
        margin-right: 8px;
        height: 48px;
        width: 48px;
      }

      &.state {
        height: 20px;
        max-height: 20px;
        width: auto;
      }
    }

    .ulb {
      font-size: 14px;
      width: 100%;
      color: #363636;
    }

    .right {
      float: right;
      margin-top: 12px;

      .user-img-txt {
        background: theme(colors.primary.main);
        padding: 10px 15px;
        border-radius: 50%;
        color: white;
        font-weight: 700;
      }
    }
  }

  .main {
    padding-top: 88px;
    padding-left: 40px;
    padding-right: 40px;
      margin-bottom: 0 !important;
      background: linear-gradient(90deg, #eff6ff, #fff) !important;
      min-height: 100vh !important;
    }
  .loginContainer {
    padding-top: 88px;
  }


  @media screen and (max-width: 640px) {
    .grounded-container {
      margin-left: 0px;
    }
  }

  @media screen and (min-width: 641px) {
    .grounded-container {
      margin-left: 64px;
    }
  }

  .react-time-picker {
    width: 100%;
  }

  .react-time-picker__wrapper {
    border: 1px solid theme(colors.inputBorder);
  }

  .react-time-picker__clock {
    display: none;
  }

  .react-time-picker__inputGroup__leadingZero {
    padding-right: 8px;
    display: inline !important;
  }

  .react-time-picker__inputGroup__input {
    padding: 0;
    min-width: none;
    outline: none !important;
    border: none !important;
  }

  .react-time-picker__wrapper {
    padding-left: 8px;
  }
}

.citizen {
  .main {
    padding-top: 82px;
    min-height: 100vh !important;
    margin-bottom: 0 !important;
    background: linear-gradient(90deg, #eff6ff, #fff) !important;
  }
}
/* ... */

